--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.jetbrains.kotlin.android)
+    id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-parcelize'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -13,33 +16,61 @@ android {
         targetSdk = 34
         versionCode = 1
         versionName = "1.0"
-
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            isMinifyEnabled = false
+            minifyEnabled false
+            shrinkResources false
             proguardFiles(
-                getDefaultProguardFile("proguard-android-optimize.txt"),
-                "proguard-rules.pro"
+                    getDefaultProguardFile("proguard-android-optimize.txt"),
+                    "proguard-rules.pro"
             )
+            buildConfigField 'String', 'BASE_URL', '"https://developers.paysera.com/"'
         }
+        debug {
+            minifyEnabled false
+            shrinkResources false
+            buildConfigField 'String', 'BASE_URL', '"https://developers.paysera.com/"'
+        }
+    }
+    buildFeatures {
+        dataBinding true
+        viewBinding = true
+        buildConfig = true
+
     }
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = "1.8"
     }
+
 }
 
 dependencies {
-
     implementation(libs.androidx.core.ktx)
     implementation(libs.androidx.appcompat)
     implementation(libs.material)
+    implementation libs.androidx.viewbinding
+    implementation libs.koin.core
+    implementation libs.koin.androidx.navigation
+    implementation "com.squareup.okhttp3:okhttp:4.12.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
+    implementation "com.squareup.retrofit2:retrofit:2.11.0"
+    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
+    implementation("androidx.room:room-runtime:2.6.1")
+    implementation libs.androidx.datastore.core.android
+    kapt("androidx.room:room-compiler:2.6.1")
+    annotationProcessor "androidx.room:room-compiler:2.6.1"
+    implementation "androidx.room:room-ktx:2.6.1"
+    implementation "androidx.recyclerview:recyclerview:1.3.2"
+    implementation "androidx.datastore:datastore-preferences:1.1.1"
+
     testImplementation(libs.junit)
     androidTestImplementation(libs.androidx.junit)
     androidTestImplementation(libs.androidx.espresso.core)
